# Homework_4

./: CMakeLists.txt
SpaceBattle/: Angle.cpp  Angle.h  CMakeLists.txt  CommandException.cpp  CommandException.h  IFuelUsing.h  IMovable.h  IMoveWithRotation.h  IRotatable.h  Vector.cpp  Vector.h
SpaceBattle/Commands/: BurnFuelCommand.cpp  BurnFuelCommand.h  CheckFuelCommand.cpp  CheckFuelCommand.h  ICommand.h  MacroCommand.cpp  MacroCommand.h  MoveCommand.cpp  MoveCommand.h  RotateCommand.cpp  RotateCommand.h  UpdateVelocityCommand.cpp  UpdateVelocityCommand.h
Test/: CMakeLists.txt  test.cpp
